Fixes the media query for the typewriter on iphone 5

--- a/app/assets/stylesheets/jumbotron.scss
+++ b/app/assets/stylesheets/jumbotron.scss
@@ -3,8 +3,8 @@
 .navbar-collapse,
 .navbar-default,
 .navbar-form {
-  background-color: #eec3c3;
-  border-color: #eec3c3;
+  background-color: #ff8b94;
+  border-color: #ff8b94;
 }
 
 .navbar-brand-text {
@@ -30,7 +30,7 @@
   font-size: 24px;
   line-height: 1.33;
   border-radius: 35px;
-  background-color: #eec3c3;
+  background-color: #ff8b94;;
 }
 
 
@@ -105,7 +105,7 @@
     font-size: 0.4em;
     line-height: 1.33;
     border-radius: 1.4em;
-    background-color: #eec3c3;
+    background-color: #ff8b94;
   }
 
   .jumbo-link {
@@ -174,7 +174,7 @@
     font-size: 0.5em;
     line-height: 1.33;
     border-radius: 1.5em;
-    background-color: #eec3c3;
+    background-color: #ff8b94;
   }
 
   .jumbo-link {
@@ -183,7 +183,7 @@
   }
 
   .main-body {
-    padding-left: 40px;
+    padding-left: 30px;
   }
 }
 
@@ -224,7 +224,7 @@
     font-size: 0.5em;
     line-height: 1.33;
     border-radius: 1.5em;
-    background-color: #eec3c3;
+    background-color: #ff8b94;
   }
 
   .jumbo-link {
@@ -264,7 +264,7 @@
     font-size: 0.5em;
     line-height: 1.33;
     border-radius: 1.5em;
-    background-color: #eec3c3;
+    background-color: #ff8b94;
   }
 
   .jumbo-link {
@@ -306,7 +306,7 @@
     font-size: 0.5em;
     line-height: 1.33;
     border-radius: 1.5em;
-    background-color: #eec3c3;
+    background-color: #ff8b94;
   }
 
   .jumbo-link {
